# pypi_projects

./: README.md
tj_nlp/: README.md  setup.cfg  setup.py
tj_nlp/src/tj_preproc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tj_nlp/src/tj_text/: tj_preproc.py
tj_nlp/tests/examples/: test.ipynb
