[metadata]
name = tj_preproc
version = 0.0.2
author = Tariq Jamil
author_email = tariqjamil.bwp@gmail.com
description = An NLP Text Preprocessing Package
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/tariqjamil-bwp/pypi_projects/tree/main/tj_nlp
project_urls =
    Bug Tracker = https://github.com/tariqjamil-bwp/pypi_projects/issues
    repository = https://github.com/tariqjamil-bwp/pypi_projects/tree/main/tj_nlp
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src